src/assets/scss/app.scss
@import 'settings';
@import 'foundation-emails';

@import 'template/template';


// Fix
.hide-for-large-custom, div.hide-for-large-custom {
    display: none;
    mso-hide: all; // hide selected elements in Outlook 2007-2013
    overflow: hidden;
    max-height: 0;
    font-size: 0;
    width: 0;
    line-height: 0;
}

@media only screen and (max-width: #{$global-breakpoint}) {
    .hide-for-large-custom, div.hide-for-large-custom {
        display: block !important;
        width: auto !important;
        overflow: visible !important;
        max-height: none !important;
        font-size: inherit !important;
        line-height: inherit !important;
    }
}

table.body table.container div.hide-for-large-custom *, table.body table.container .hide-for-large-custom * {
    mso-hide: all; // hide selected elements in Outlook 2007-2013
}

@media only screen and (max-width: #{$global-breakpoint}) {
    table.body table.container div.hide-for-large-custom, table.body table.container .hide-for-large-custom {
        display: table !important;
        width: 100% !important;
    }
}


.grey-background{background-color: #f1f1f1; Background-color: #f1f1f1;}

.wrapper-inner{padding-left: 20px; Padding-left: 20px; padding-right: 20px; Padding-right: 20px;}

a{text-decoration: underline; Text-decoration: underline;}

p.terms{margin-bottom: 0px; Margin-bottom:0px}

p.title-label{margin-bottom: 20px; Margin-bottom:20px; margin-top: 20px; Margin-top:20px}

